--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,19 @@
-
-html, body {
+html,
+body {
   height: 100%;
-  background-color:transparent;
+  background-color: transparent;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", "Canterell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu",
+    "Canterell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-} 
+}
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 .preview.markdown-body {
@@ -20,24 +22,26 @@ code {
   overflow: auto;
   box-sizing: border-box;
   color: #999999;
-  background-color:#FFF5D6
+  background-color: #fff5d6;
 }
 
 .preview.markdown-body pre {
-    position: relative;
-    margin-bottom: 3em !important;
-    background-color: #FFF5D6;
-    -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 35px -23px 2px -16px rgba(0, 0, 0, 0);
-    box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 35px -23px 2px -16px rgba(0, 0, 0, 0);
+  position: relative;
+  margin-bottom: 3em !important;
+  background-color: #fff5d6;
+  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
+    35px -23px 2px -16px rgba(0, 0, 0, 0);
+  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000,
+    35px -23px 2px -16px rgba(0, 0, 0, 0);
 }
-
 
 @media (prefers-color-scheme: dark) {
   html {
+    background: #fff5d6;
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: #fff5d6;
+    background: #fff5d6;
   }
 }
